<resources>
    <string name="app_name">WeDiscover</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WeDiscover</string>
    <string name="nav_header_subtitle">wediscoverapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Estados</string>
    <string name="menu_gallery">Estado</string>
    <string name="menu_slideshow">Glosario</string>
    <string name="menu_tools">Nosotros</string>
    <string name="menu_share">Localidad</string>
    <string name="menu_send">Preguntas Frecuentes</string>
    <string name="title_activity_maps">Localidades</string>
    <string name="logo_wediscover">Logo WeDiscover</string>
    <string name="localidades">Localidades</string>
    <string name="tel_fonos_de_emergencia">Teléfonos de Emergencia</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="informaci_n">Información</string>
    <string name="imagen_localidad">Imagen Localidad</string>
    <string name="imagen_estado">Imagen Estado</string>
    <string name="nosotros">Nosotros</string>
    <string name="banner_ad_unit_id">ca-app-pub-2065790873789795/1117328018</string>
    <string name="glosario">Glosario</string>
    <string name="ver_descripcion_estado">Ver Descripción del Estado</string>
    <string name="policia">Policía</string>
    <string name="medico">Médico</string>
    <string name="bomberos">Bomberos</string>
    <string name="municipio">Municipio</string>
    <string name="bioseguridad">Bioseguridad</string>
    <string name="cima">Clima</string>
    <string name="ver_ubicaciones_en_mapa">Ver Ubicaciones en Mapa</string>
    <string name="ver_descripcion_completa">Ver Descripción completa</string>
    <string name="biodiversidad">Biodiversidad</string>
    <string name="ambiental">Ambiental</string>
    <string name="cultura">Cultura</string>
    <string name="arqueologia">Arqueología</string>
    <string name="historia">Historia</string>
    <string name="economia">Economía</string>
    <string name="desarrollo_sustentable">Desarrollo Sustentable</string>
    <string name="demografia">Demografía</string>
    <string name="gastronomia">Gastronomía</string>

</resources>
